Default Change List

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
         <h1>Welcome to Github Repository</h1>
-    <p> COLOR = RED </p>
+    <p> COLOR = BLUE </p>
 
 </body>
 </html>
